--- a/templates/diagnosis-translation.html
+++ b/templates/diagnosis-translation.html
@@ -105,10 +105,10 @@
 		<uib-accordion>
 
 			<!-- SECTION: Test names -->
-			<div uib-accordion-group is-open="statusDiagnosis.open">
+			<div uib-accordion-group is-open="diagnosisSection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Assigned Diagnoses</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDiagnosis.open, 'glyphicon-chevron-right': !statusDiagnosis.open}"></i>
+						<strong>Assigned Diagnoses</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': diagnosisSection.open, 'glyphicon-chevron-right': !diagnosisSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="alert alert-info" role="alert">
@@ -148,10 +148,10 @@
 			</div>
 
 			<!-- SECTION: Titles -->
-			<div uib-accordion-group is-open="statusTitle.open">
+			<div uib-accordion-group is-open="titleSection.open">
 					<uib-accordion-heading>
 						<div>
-							<strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
+							<strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
 						</div>
 					</uib-accordion-heading>
 					<div class="row">
@@ -171,10 +171,10 @@
 				</div>
 
 				<!-- SECTION: Description -->
-				<div uib-accordion-group is-open="statusDescription.open">
+				<div uib-accordion-group is-open="descriptionSection.open">
 					<uib-accordion-heading>
 						<div>
-							<strong>Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDescription.open, 'glyphicon-chevron-right': !statusDescription.open}"></i>
+							<strong>Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': descriptionSection.open, 'glyphicon-chevron-right': !descriptionSection.open}"></i>
 						</div>
 					</uib-accordion-heading>
 					<div class="row">
@@ -194,10 +194,10 @@
 				</div>
 
 				<!-- SECTION: Educational material -->
-				<div uib-accordion-group is-open="statusEducationalMaterial.open">
+				<div uib-accordion-group is-open="educationalMaterialSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Attached Educational Material</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusEducationalMaterial.open, 'glyphicon-chevron-right': !statusEducationalMaterial.open}"></i>
+                <strong>Attached Educational Material</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': educationalMaterialSection.open, 'glyphicon-chevron-right': !educationalMaterialSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
