--- a/templates/educational-material.html
+++ b/templates/educational-material.html
@@ -111,10 +111,10 @@
         <div class="bannerMessageModal alert-success">{{bannerMessageModal}}</div>
         <uib-accordion>
           <!-- SECTION: Titles -->
-          <div uib-accordion-group is-open="statusTitle.open">
+          <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
+                <strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
@@ -133,10 +133,10 @@
             </div>
           </div>
           <!-- SECTION: Single URL --> 
-          <div uib-accordion-group is-open="statusURL.open" ng-show="!eduMat.tocs.length">
+          <div uib-accordion-group is-open="urlSection.open" ng-show="!eduMat.tocs.length">
             <uib-accordion-heading>
               <div>
-                <strong>URLs</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusURL.open, 'glyphicon-chevron-right': !statusURL.open}"></i>
+                <strong>URLs</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': urlSection.open, 'glyphicon-chevron-right': !urlSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -168,10 +168,10 @@
             </div>
           </div>
           <!-- SECTION: Table of contents -->
-          <div uib-accordion-group is-open="statusTOC" ng-hide="eduMat.url_EN || eduMat.url_FR">
+          <div uib-accordion-group is-open="tocSection.open" ng-hide="eduMat.url_EN || eduMat.url_FR">
             <uib-accordion-heading>
               <div>
-                <strong>Table of Contents</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTOC, 'glyphicon-chevron-right': !statusTOC}"></i>
+                <strong>Table of Contents</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': tocSection.open, 'glyphicon-chevron-right': !tocSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row" ng-repeat="toc in eduMat.tocs" style="margin-bottom:7px; border-bottom:1px solid #ddd;">
@@ -212,10 +212,10 @@
             </div>
           </div>  
           <!-- SECTION: Supporting PDF -->
-          <div uib-accordion-group is-open="statusPDF.open">
+          <div uib-accordion-group is-open="pdfSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Supporting PDF Document</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusPDF.open, 'glyphicon-chevron-right': !statusPDF.open}"></i>
+                <strong>Supporting PDF Document</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': pdfSection.open, 'glyphicon-chevron-right': !pdfSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -248,10 +248,10 @@
           </div>
 
           <!-- SECTION: Patient filter -->
-          <div uib-accordion-group is-open="statusPatientFilter.open">
+          <div uib-accordion-group is-open="patientFilterSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusPatientFilter.open, 'glyphicon-chevron-right': !statusPatientFilter.open}"></i>
+                <strong>Filter By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': patientFilterSection.open, 'glyphicon-chevron-right': !patientFilterSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -282,10 +282,10 @@
           </div>
 
           <!-- SECTION: Demographic filters -->
-          <div uib-accordion-group is-open="statusDemographicFilter.open"> 
+          <div uib-accordion-group is-open="demographicFilterSection.open"> 
             <uib-accordion-heading>
               <div>
-                <strong>Filter By Demographics </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDemographicFilter.open, 'glyphicon-chevron-right': !statusDemographicFilter.open}"></i>
+                <strong>Filter By Demographics </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': demographicFilterSection.open, 'glyphicon-chevron-right': !demographicFilterSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -343,10 +343,10 @@
           </div> 
 
           <!-- SECTION: Appointment filter -->
-          <div uib-accordion-group is-open="statusAppointmentFilter.open">
+          <div uib-accordion-group is-open="appointmentFilterSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter By Appointment</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusAppointmentFilter.open, 'glyphicon-chevron-right': !statusAppointmentFilter.open}"></i>
+                <strong>Filter By Appointment</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': appointmentFilterSection.open, 'glyphicon-chevron-right': !appointmentFilterSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -377,10 +377,10 @@
           </div>
 
           <!-- SECTION: Diagnosis filter -->
-          <div uib-accordion-group is-open="statusDiagnosisFilter.open">
+          <div uib-accordion-group is-open="diagnosisFilterSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDiagnosisFilter.open, 'glyphicon-chevron-right': !statusDiagnosisFilter.open}"></i>
+                <strong>Filter By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': diagnosisFilterSection.open, 'glyphicon-chevron-right': !diagnosisFilterSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -411,10 +411,10 @@
           </div>
 
           <!-- SECTION: Doctor filter -->
-          <div uib-accordion-group is-open="statusDoctorFilter.open">
+          <div uib-accordion-group is-open="doctorFilterSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDoctorFilter.open, 'glyphicon-chevron-right': !statusDoctorFilter.open}"></i>
+                <strong>Filter By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': doctorFilterSection.open, 'glyphicon-chevron-right': !doctorFilterSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -445,10 +445,10 @@
           </div>
 
           <!-- SECTION: Resource Filter -->
-          <div uib-accordion-group is-open="statusResourceFilter.open">
+          <div uib-accordion-group is-open="resourceFilterSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusResourceFilter.open, 'glyphicon-chevron-right': !statusResourceFilter.open}"></i>
+                <strong>Filter By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': resourceFilterSection.open, 'glyphicon-chevron-right': !resourceFilterSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
