--- a/templates/hospital-map.html
+++ b/templates/hospital-map.html
@@ -106,10 +106,10 @@
         <uib-accordion>
           
           <!-- SECTION: Title -->
-          <div uib-accordion-group is-open="statusTitle.open">
+          <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
+                <strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
@@ -129,10 +129,10 @@
           </div>
 
           <!-- SECTION: Description -->
-          <div uib-accordion-group is-open="statusDescription.open">
+          <div uib-accordion-group is-open="descriptionSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDescription.open, 'glyphicon-chevron-right': !statusDescription.open}"></i>
+                <strong>Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': descriptionSection.open, 'glyphicon-chevron-right': !descriptionSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
@@ -152,10 +152,10 @@
           </div>
 
           <!-- SECTION: QR Code & Map URL -->
-          <div uib-accordion-group is-open="statusQRMap.open">
+          <div uib-accordion-group is-open="qrUrlSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>QR Identifier / Map URL</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusQRMap.open, 'glyphicon-chevron-right': !statusQRMap.open}"></i>
+                <strong>QR Identifier / Map URL</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': qrUrlSection.open, 'glyphicon-chevron-right': !qrUrlSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
