--- a/templates/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire.html
@@ -111,10 +111,10 @@
 		<uib-accordion>
 
       <!-- SECTION: Titles -->
-			<div uib-accordion-group is-open="statusTitle.open">
+			<div uib-accordion-group is-open="titleSection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
+						<strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="row">
@@ -134,10 +134,10 @@
       </div>
       
       <!-- SECTION: Patient filter -->
-      <div uib-accordion-group is-open="statusPatientFilter.open">
+      <div uib-accordion-group is-open="patientFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusPatientFilter.open, 'glyphicon-chevron-right': !statusPatientFilter.open}"></i>
+            <strong>Filter By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': patientFilterSection.open, 'glyphicon-chevron-right': !patientFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
@@ -168,10 +168,10 @@
       </div>
 
       <!-- SECTION: Demographic filters -->
-      <div uib-accordion-group is-open="statusDemographicFilter.open"> 
+      <div uib-accordion-group is-open="demographicFilterSection.open"> 
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Demographics </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDemographicFilter.open, 'glyphicon-chevron-right': !statusDemographicFilter.open}"></i>
+            <strong>Filter By Demographics </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': demographicFilterSection.open, 'glyphicon-chevron-right': !demographicFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
@@ -229,10 +229,10 @@
       </div> 
 
       <!-- SECTION: Appointment filter -->
-      <div uib-accordion-group is-open="statusAppointmentFilter.open">
+      <div uib-accordion-group is-open="appointmentFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Appointment</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusAppointmentFilter.open, 'glyphicon-chevron-right': !statusAppointmentFilter.open}"></i>
+            <strong>Filter By Appointment</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': appointmentFilterSection.open, 'glyphicon-chevron-right': !appointmentFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
@@ -263,10 +263,10 @@
       </div>
 
       <!-- SECTION: Diagnosis filter -->
-      <div uib-accordion-group is-open="statusDiagnosisFilter.open">
+      <div uib-accordion-group is-open="diagnosisFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDiagnosisFilter.open, 'glyphicon-chevron-right': !statusDiagnosisFilter.open}"></i>
+            <strong>Filter By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': diagnosisFilterSection.open, 'glyphicon-chevron-right': !diagnosisFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
@@ -297,10 +297,10 @@
       </div>
 
       <!-- SECTION: Doctor filter -->
-      <div uib-accordion-group is-open="statusDoctorFilter.open">
+      <div uib-accordion-group is-open="doctorFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDoctorFilter.open, 'glyphicon-chevron-right': !statusDoctorFilter.open}"></i>
+            <strong>Filter By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': doctorFilterSection.open, 'glyphicon-chevron-right': !doctorFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
@@ -331,10 +331,10 @@
       </div>
 
       <!-- SECTION: Resource Filter -->
-      <div uib-accordion-group is-open="statusResourceFilter.open">
+      <div uib-accordion-group is-open="resourceFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusResourceFilter.open, 'glyphicon-chevron-right': !statusResourceFilter.open}"></i>
+            <strong>Filter By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': resourceFilterSection.open, 'glyphicon-chevron-right': !resourceFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
