--- a/templates/notification.html
+++ b/templates/notification.html
@@ -105,10 +105,10 @@
       <div class="modal-body">
         <uib-accordion>
           <!-- SECTION: Titles -->
-          <div uib-accordion-group is-open="statusTitle.open">
+          <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
+                <strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
@@ -128,10 +128,10 @@
           </div>
 
           <!-- SECTION: Message -->
-          <div uib-accordion-group is-open="statusMessage.open">
+          <div uib-accordion-group is-open="messageSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Messages</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusMessage.open, 'glyphicon-chevron-right': !statusMessage.open}"></i>
+                <strong>Messages</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': messageSection.open, 'glyphicon-chevron-right': !messageSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
