--- a/templates/questionnaire-question.html
+++ b/templates/questionnaire-question.html
@@ -104,10 +104,10 @@
 	<div class="modal-body">
 		<uib-accordion>
       <!-- SECTION: Title -->
-			<div uib-accordion-group is-open="statusTitle.open">
+			<div uib-accordion-group is-open="titleSection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
+						<strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="row">
@@ -127,10 +127,10 @@
 			</div>
 
       <!-- SECTION: Answer type -->
-			<div uib-accordion-group is-open="statusAnswerType.open">
+			<div uib-accordion-group is-open="answerTypeSection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Answer Type</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusAnswerType.open, 'glyphicon-chevron-right': !statusAnswerType.open}"></i>
+						<strong>Answer Type</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': answerTypeSection.open, 'glyphicon-chevron-right': !answerTypeSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="alert alert-info" role="alert">
@@ -157,10 +157,10 @@
 			</div>
 
       <!-- SECTION: Question group -->
-			<div uib-accordion-group is-open="statusQuestionGroup.open">
+			<div uib-accordion-group is-open="questionGroupSection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Question Group</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusQuestionGroup.open, 'glyphicon-chevron-right': !statusQuestionGroup.open}"></i>
+						<strong>Question Group</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': questionGroupSection.open, 'glyphicon-chevron-right': !questionGroupSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="alert alert-info" role="alert">
