--- a/templates/user.html
+++ b/templates/user.html
@@ -106,10 +106,10 @@
         <uib-accordion>
 
           <!-- SECTION: Password -->
-          <div uib-accordion-group is-open="statusPassword.open">
+          <div uib-accordion-group is-open="passwordSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Change Password</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusPassword.open, 'glyphicon-chevron-right': !statusPassword.open}"></i>
+                <strong>Change Password</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': passwordSection.open, 'glyphicon-chevron-right': !passwordSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="form-horizontal">
@@ -141,10 +141,10 @@
           </div>
 
           <!-- SECTION: Role -->
-          <div uib-accordion-group is-open="statusRole.open">
+          <div uib-accordion-group is-open="roleSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Change Role </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusRole.open, 'glyphicon-chevron-right': !statusRole.open}"></i>
+                <strong>Change Role </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': roleSection.open, 'glyphicon-chevron-right': !roleSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
