--- a/templates/email.html
+++ b/templates/email.html
@@ -104,10 +104,10 @@
       <div class="modal-body">
         <uib-accordion>
           <!-- SECTION: Subject -->
-          <div uib-accordion-group is-open="statusSubject.open">
+          <div uib-accordion-group is-open="subjectSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Subjects</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusSubject.open, 'glyphicon-chevron-right': !statusSubject.open}"></i>
+                <strong>Subjects</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': subjectSection.open, 'glyphicon-chevron-right': !subjectSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
@@ -126,10 +126,10 @@
             </div>
           </div>
           <!-- SECTION: Message -->
-          <div uib-accordion-group is-open="statusMessage.open">
+          <div uib-accordion-group is-open="messageSection.open">
             <uib-accordion-heading>
               <div>
-                <strong>Messages</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusMessage.open, 'glyphicon-chevron-right': !statusMessage.open}"></i>
+                <strong>Messages</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': messageSection.open, 'glyphicon-chevron-right': !messageSection.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="row">
