--- a/templates/questionnaire.html
+++ b/templates/questionnaire.html
@@ -106,10 +106,10 @@
 		<uib-accordion>
 
       <!-- SECTION: Titles -->
-			<div uib-accordion-group is-open="statusTitle.open">
+			<div uib-accordion-group is-open="titleSection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTitle.open, 'glyphicon-chevron-right': !statusTitle.open}"></i>
+						<strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="row">
@@ -129,10 +129,10 @@
 			</div>
 
       <!-- SECTION: Privacy -->
-			<div uib-accordion-group is-open="statusPrivacy.open">
+			<div uib-accordion-group is-open="privacySection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Privacy </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusPrivacy.open, 'glyphicon-chevron-right': !statusPrivacy.open}"></i>
+						<strong>Privacy </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': privacySection.open, 'glyphicon-chevron-right': !privacySection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="row">
@@ -162,10 +162,10 @@
 			</div>
 
       <!-- SECTION: Question group -->
-			<div uib-accordion-group is-open="statusQuestionGroup.open">
+			<div uib-accordion-group is-open="questionGroupSection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Question Group </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusQuestionGroup.open, 'glyphicon-chevron-right': !statusQuestionGroup.open}"></i>
+						<strong>Question Group </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': questionGroupSection.open, 'glyphicon-chevron-right': !questionGroupSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="alert alert-info" role="alert">
@@ -319,10 +319,10 @@
 			</div>
 
       <!-- SECTION: Tags -->
-			<div uib-accordion-group is-open="statusTags.open">
+			<div uib-accordion-group is-open="tagsSection.open">
 				<uib-accordion-heading>
 					<div>
-						<strong>Tag </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusTags.open, 'glyphicon-chevron-right': !statusTags.open}"></i>
+						<strong>Tag </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': tagsSection.open, 'glyphicon-chevron-right': !tagsSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="alert alert-info" role="alert">
@@ -349,10 +349,10 @@
       </div>
       
 	   	<!-- SECTION: Patient filter -->
-      <div uib-accordion-group is-open="statusPatientFilter.open">
+      <div uib-accordion-group is-open="patientFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusPatientFilter.open, 'glyphicon-chevron-right': !statusPatientFilter.open}"></i>
+            <strong>Filter By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': patientFilterSection.open, 'glyphicon-chevron-right': !patientFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
@@ -383,10 +383,10 @@
       </div>
 
       <!-- SECTION: Demographic filters -->
-			<div uib-accordion-group is-open="statusDemographicFilter.open"> 
+			<div uib-accordion-group is-open="demographicFilterSection.open"> 
 				<uib-accordion-heading>
 					<div>
-						<strong>Filter By Demographics </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDemographicFilter.open, 'glyphicon-chevron-right': !statusDemographicFilter.open}"></i>
+						<strong>Filter By Demographics </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': demographicFilterSection.open, 'glyphicon-chevron-right': !demographicFilterSection.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="alert alert-info" role="alert">
@@ -443,21 +443,21 @@
 				</div>
       </div> 
       
-     	<!-- SECTION: Appointment/Task filter -->
-      <div uib-accordion-group is-open="statusExpressionFilter.open">
+     	<!-- SECTION: Appointment filter -->
+      <div uib-accordion-group is-open="appointmentFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Appointment or Task Code</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusExpressionFilter.open, 'glyphicon-chevron-right': !statusExpressionFilter.open}"></i>
+            <strong>Filter By Appointment</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': appointmentFilterSection.open, 'glyphicon-chevron-right': !appointmentFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
-          <strong>Current Activity Filters</strong><br>
+          <strong>Current Appointment Filters</strong><br>
           <p>
-            <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(termList)"></span>
-            <span ng-if="allFilters(termList)">No filter</span>
-            <ul class="list-items" ng-if="!allFilters(termList)">
-              <li ng-repeat="selectedTerm in termList | filter: {added: 1} : 1" ng-hide="allFilters(termList)">
-                {{selectedTerm.name}}
+            <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(appointmentList)"></span>
+            <span ng-if="allFilters(appointmentList)">No filter</span>
+            <ul class="list-items" ng-if="!allFilters(appointmentList)">
+              <li ng-repeat="selectedAppointment in appointmentList | filter: {added: 1} : 1" ng-hide="allFilters(appointmentList)">
+                {{selectedAppointment.name}}
               </li>
             </ul>
           </p>
@@ -465,17 +465,12 @@
         <div class="list-space">
           <div class="input-group">
             <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-            <input class="form-control" type="text" ng-model="termSearchField" ng-change="searchTerm(termSearchField)" placeholder="Search..."/>
+            <input class="form-control" type="text" ng-model="appointmentSearchField" ng-change="searchAppointment(appointmentSearchField)" placeholder="Search..."/>
           </div>
-          <div style="padding: 10px;">
-            <label> 
-              <input type="checkbox" ng-click="selectAllTerms()"> Select All
-            </label>
-          </div>    
           <ul class="list-items">
-            <li ng-repeat="term in termList | filter: searchTermsFilter">
+            <li ng-repeat="appointment in appointmentList | filter: searchAppointmentFilter">
               <label>
-                <input type="checkbox" ng-click="selectItem(term)" ng-checked="term.added" /> {{term.name}}
+                <input type="checkbox" ng-click="selectItem(appointment)" ng-checked="appointment.added" /> {{appointment.name}}
               </label>
             </li>
           </ul>
@@ -483,10 +478,10 @@
       </div>
 
       <!-- SECTION: Diagnosis filter -->
-      <div uib-accordion-group is-open="statusDiagnosisFilter.open">
+      <div uib-accordion-group is-open="diagnosisFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDiagnosisFilter.open, 'glyphicon-chevron-right': !statusDiagnosisFilter.open}"></i>
+            <strong>Filter By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': diagnosisFilterSection.open, 'glyphicon-chevron-right': !diagnosisFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
@@ -517,10 +512,10 @@
       </div>
 
       <!-- SECTION: Doctor filter -->
-      <div uib-accordion-group is-open="statusDoctorFilter.open">
+      <div uib-accordion-group is-open="doctorFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDoctorFilter.open, 'glyphicon-chevron-right': !statusDoctorFilter.open}"></i>
+            <strong>Filter By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': doctorFilterSection.open, 'glyphicon-chevron-right': !doctorFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
@@ -551,10 +546,10 @@
       </div>
 
       <!-- SECTION: Resource Filter -->
-      <div uib-accordion-group is-open="statusResourceFilter.open">
+      <div uib-accordion-group is-open="resourceFilterSection.open">
         <uib-accordion-heading>
           <div>
-            <strong>Filter By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusResourceFilter.open, 'glyphicon-chevron-right': !statusResourceFilter.open}"></i>
+            <strong>Filter By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': resourceFilterSection.open, 'glyphicon-chevron-right': !resourceFilterSection.open}"></i>
           </div>
         </uib-accordion-heading>
         <div class="alert alert-info" role="alert">
